# cpp-project

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  README.md  meson.build
src/: main.cpp
